# shadowrs

./: .gitignore  Cargo.toml  README.md
crates/shadow_build/: Cargo.toml
crates/shadow_build/src/: main.rs
crates/shadow_charts/: Cargo.toml
crates/shadow_charts/src/: charts.rs  charts_config.rs  common.rs  lib.rs
crates/shadow_dev/: Cargo.toml
crates/shadow_dev/src/: main.rs
crates/shadow_features/: Cargo.toml
crates/shadow_features/src/: bag_words.rs  bag_words_cosine_similarity.rs  bag_words_cosine_similarity_test.rs  compute.rs  identity.rs  lib.rs  normalized.rs  one_hot_encoded.rs  word_embedding.rs
crates/shadow_finite/: Cargo.toml
crates/shadow_finite/src/: lib.rs
crates/shadow_id/: Cargo.toml
crates/shadow_id/src/: id_test.rs  lib.rs
crates/shadow_kill_chip/: Cargo.toml
crates/shadow_kill_chip/src/: lib.rs
crates/shadow_license/: Cargo.toml
crates/shadow_license/src/: lib.rs  license.public.rsa  license_test.rs  main.rs
crates/shadow_linear/: Cargo.toml
crates/shadow_linear/src/: binary_classifier.rs  lib.rs  multiclass_classifier.rs  regressor.rs  serialize.rs  shap.rs
crates/shadow_metrics/: Cargo.toml
crates/shadow_metrics/src/: accuracy.rs  auc_roc.rs  auc_ros_test.rs  binary_classification.rs  binary_classification_test.rs  binary_cross_entropy.rs  cross_entropy.rs  lib.rs  mean.rs  mean_errors.rs  mean_variance.rs  mode.rs  multiclass_clasi.rs  multiclass_classi.rs  multiclass_classi_test.rs  regression.rs
crates/shadow_model/: Cargo.toml
crates/shadow_model/src/: lib.rs  model_train_options.rs
crates/shadow_number_formatter/: Cargo.toml
crates/shadow_number_formatter/src/: lib.rs  tests.rs
crates/shadow_progress_counter/: Cargo.toml
crates/shadow_progress_counter/src/: lib.rs
crates/shadow_serve/: Cargo.toml
crates/shadow_serve/src/: lib.rs  serve_test.rs
crates/shadow_table/: Cargo.toml
crates/shadow_table/src/: lib.rs  load.rs  load_test.rs
crates/shadow_text/: Cargo.toml
crates/shadow_text/src/: lib.rs  ngram.rs  tokenizer.rs  tokenizer_test.rs  word_embedding.rs
crates/shadow_tree/: Cargo.toml
crates/shadow_tree/src/: compute_binning_instructions.rs  lib.rs  pool.rs  timing.rs
crates/shadow_wheel_writer/: Cargo.toml
crates/shadow_wheel_writer/src/: lib.rs  main.rs  tests.rs
crates/shadow_zip/: Cargo.toml
crates/shadow_zip/src/: lib.rs  pzip.rs  zip.rs  zip_tests.rs
language_support/: README.md
language_support/ruby/lib/: shadow.rb
language_support/ruby/lib/shadow/: shadow.rb
