[package]
name = "shadow_linear"
version = "1.0.0"
edition = "2021"

[dependencies]
buffalo = { workspace = true }
clap = { workspace = true }
ndarray = { workspace = true }
num = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

shadow_features = { workspace = true }
shadow_kill_chip = { workspace = true }
shadow_metrics = { workspace = true }
shadow_progress_counter = { workspace = true }
shadow_table = { workspace = true }
shadow_zip = { workspace = true }