[package]
name = "shadow_model"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
buffalo = { workspace = true }
fnv = { workspace = true }
num = { workspace = true }
shadow_linear = { workspace = true }
shadow_text = { workspace = true }
shadow_tree = { workspace = true }
