[package]
name = "shadow_table"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
csv = { workspace = true }
fast-float = { workspace = true }
fnv = { workspace = true }
ndarray = { workspace = true }
num = { workspace = true }
shadow_progress_counter = { workspace = true }
shadow_zip = { workspace = true }

[dev-dependencies]
insta = { workspace = true }